# bevy-translation-table

./: Cargo.toml  README.md
assets/: lang.csv  lang.ods
examples/: minimal.rs  minimal_csv.rs
src/: lib.rs
