[package]
name = "bevy_translation_table"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.13.2"
bevy_device_lang = { version = "0.4.0", optional = true }
spreadsheet-ods = { version = "0.22.5", optional = true }
csv = { version = "1.3.0", optional = true }

[features]
default = ["auto", "csv", "ods"]
ods = ["dep:spreadsheet-ods"]
csv = ["dep:csv"]
auto = ["dep:bevy_device_lang"]
# recommended to check that your translations are not missing any values from the code side
catch-missing-values = []
