[package]
name = "bevy_translation_table"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy_ecs = "0.13.2"                                       # only need knowledge of the ECS world, systems, and resource. Hence, smaller dependency
bevy_device_lang = { version = "0.4.0", optional = true }
spreadsheet-ods = { version = "0.22.5", optional = true }
csv = { version = "1.3.0", optional = true }

[features]
default = ["auto", "csv", "ods"]

# enables loading Open Document Spreadsheet (ODS) files, which make editing much easier for less technical team members.
ods = ["dep:spreadsheet-ods"]

# enables loading csv data as a file or a raw string
csv = ["dep:csv"]

# enables detecting the system language and attemping to load that system locale
auto = ["dep:bevy_device_lang"]

# recommended to check that your translations are not missing any values from the code side
catch-missing-values = []
